--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -4,7 +4,6 @@
 body {
 	font-family: Work Sans, sans-serif;
 	font-size: 18px;
-	border: 2px solid #222;
 	color: #222;
 }
 header {
@@ -36,7 +35,6 @@ ul {
 li{
 	float: left;
 	width: 50%;
-	border: 1px solid #222;
 	text-align: center;
 	padding:4em 0;
 }
@@ -57,6 +55,17 @@ nav a{
 	padding: 100px;
 }
 
+.column {
+	float: left;
+	width: 25%;
+	padding: 5px;
+}
+
+.row: :after {
+	content: "";
+	clear: both;
+	display: table;
+}
 
 .clearfix:after {
 	visibility: hidden;
