--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -23,6 +23,7 @@ h1 {
 h2 {
 	font-size: 1.5em;
 	padding: .75em 0;
+	width: 100%;
 }
 p {
 	font-size: .75em;
@@ -104,6 +105,15 @@ footer {
 	clear: both;
 }
 
+label[for="subject"] {
+	vertical-align: top; 
+}
+
+input, textarea {
+	border: 1px solid black;
+	margin-bottom: 5px;
+}
+
 @media only screen and (max-width: 1337px)
 {
 	#logo {
@@ -113,5 +123,18 @@ footer {
 		width: 50%;*/
 		padding: 50px;
 }	
+}
+@media only screen and (max-width: 827px)
+{
+	nav {
+		/* font-size: 30px; */
+		text-align: center;
+	}
+	nav a{
+		text-decoration: none;
+		color: #222;
+		padding:.75em;
+		display: block;
+	} 
 }
 
